# fdic-bank-find-mcp-server

./: .dockerignore  .env.example  .gitignore  .windsurfrules  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  TODOS.md  rustfmt.toml
.github/: .gitmessage  commit_message_template.md  copilot-instructions.md
.github/workflows/: docker-publish.yml
docs/: fdic-mcp.config
public/: openapi.json
public/fdic/: summary_properties.yaml  swagger.yaml
public/schemas/: demographics.json  failures.json  history.json  institutions.json  locations.json  sod.json  summary.json
src/: common.rs  config.rs  fdic_response.rs  lib.rs  main.rs  param_utils.rs  server.rs
src/handlers/: demographics.rs  failures.rs  financials.rs  history.rs  institutions.rs  locations.rs  mod.rs  sod.rs  summary.rs
templates/: handler.rs.tera  handlers_mod.rs.tera
tests/: locations.rs
