[package]
name = "fdic-bank-find-mcp-server"
version = "0.1.0"
edition = "2024"
default-run = "fdic-bank-find-mcp-server"

[[bin]]
name = "fdic-bank-find-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json", "macros", "ws", "multipart"] }
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["server"] }
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tera = "1.17"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "5.3.1"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
regex = "1.11.1"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
wiremock = "0.6"
