[package]
name = "fdic-bank-find-mcp-server"
version = "0.1.0"
edition = "2024"
default-run = "fdic-bank-find-mcp-server"

[[bin]]
name = "fdic-bank-find-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
# async-trait = "0.1"
axum = { version = "0.8.3", features = ["json", "macros", "ws", "multipart"] }
# base64 = "0.22.1"
clap = { version = "4", features = ["derive"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
# futures-util = "0.3"
# hyper = { version = "1", features = ["server"] }
# http-body-util = "0.1"
log = "0.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main", features = [
    "macros",
    "server",
    "transport-sse-server",
    "transport-io",
    "auth",
] }
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
# tokio-stream = "0.1.17"
tokio-util = "0.7"
tower = { version = "0.5.2", features = ["util"] }
# tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tera = "1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
urlencoding = "2.1.3"
utoipa = "5.3.1"
utoipa-swagger-ui = "9.0.1"

[patch.crates-io]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }

[dev-dependencies]
wiremock = "0.6"
